syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "SalesArrangement.proto";

message GetSalesArrangementsByCaseIdRequest {
	int64 CaseId = 1;
	repeated int32 States = 2;
}

message GetSalesArrangementsByCaseIdResponse {
	repeated SalesArrangement SalesArrangements = 1;
}

